extra html stuff

--- a/recipes/static/main.html
+++ b/recipes/static/main.html
@@ -17,6 +17,8 @@
         <a href="/auth">please login with github to continue!</a>
     </div>
     <div class="content auth">
+        <a href="/cookbooks">cookbooks!</a>
+        <a href="/recipes">recipes!</a>
         <a href="/api-docs">how to use this api</a>
     </div>
 </body>
